--- a/themes/tree/assets/public/css/theme.css
+++ b/themes/tree/assets/public/css/theme.css
@@ -12299,6 +12299,10 @@ li a {
   color: white;
 }
 
+.nav-modal a {
+  color: #fff !important;
+}
+
 /*main-image*/
 .main-image h1 {
   padding-bottom: 220px;
