--- a/themes/tree/assets/resources/scss/_main.scss
+++ b/themes/tree/assets/resources/scss/_main.scss
@@ -63,7 +63,7 @@ li{
 	        height:650px;
 	    }
 	h1{
-		padding-bottom: 220px; 
+		padding-bottom: 320px; 
 		color:white; 
 		text-shadow: 2px 2px 5px #6B78B4;
 		@media (min-width: $breakpoint-medium) {
@@ -119,6 +119,14 @@ li{
 	    }
 	}
 }
+
+.reviews{
+	p{
+		@media (min-width: $breakpoint-medium) {
+	        font-size:19px;
+	    }
+	}
+}
 .location{
 	margin-left: auto;
     margin-right: auto;
@@ -138,7 +146,7 @@ li{
 		    font-size: 35px;
 		    font-weight: 600;
 		    letter-spacing: 1px;
-		    font-family: 'Lato', sans-serif;
+		    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
         }
         .right{
            float: right;
@@ -148,7 +156,7 @@ li{
     p{
     	    margin-top: 10px;
             width: 100%;
-            font-family: 'Lato', sans-serif;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             letter-spacing: 1.2px;
 
             @media (min-width: $breakpoint-medium) {
@@ -162,10 +170,14 @@ li{
 .room-sections{
     
     .check{
-    	
-    }
-}
+    	color: #000;
 
+    	&:hover{
+    		color:#999;
+    	}
+
+   }
+}
 /*dining*/
 
 .dining-sec{
@@ -181,7 +193,6 @@ li{
 	h3{
 		margin-left: auto;
         margin-right: auto;
-        text-shadow: 2px 2px 5px #6b78b4;
         font-size: 30px;
 	}
 	.flex{
